--- a/musicapp/templates/layout.html
+++ b/musicapp/templates/layout.html
@@ -12,25 +12,19 @@
     />
 
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css"
     />
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
-
-    {% if title %}
-    <title>{% block title %}{% endblock title%}</title>
-    {% else %}
     <title>cuhu</title>
-    {% endif %}
   </head>
   <body>
-  
     <nav class="navbar fixed-top navbar-expand-lg bg-primary-subtle">
       <div class="container-fluid">
-        <a class="navbar-brand mb-0 mx-5 h1 display-6 fw-bold" href="{{ url_for('index') }}">
+        <a
+          class="navbar-brand mb-0 mx-5 h1 display-6 fw-bold"
+          href="{{ url_for('index') }}"
+        >
           <img
             src="{{ url_for('static', filename = '/musical-note.png') }}"
             alt="Logo"
@@ -40,53 +34,133 @@
           />
           cuhu
         </a>
-        
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between align-items-center"  id="navbarSupportedContent">
+        <div
+          class="collapse navbar-collapse navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between align-items-center"
+          id="navbarSupportedContent"
+        >
           <div class="ms-auto d-flex mx-5">
-          {% if current_user.is_authenticated %}
-            {% if current_user.is_creator %}
-              <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('creator_dashboard') }}">Dashboard</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('playlist') }}">Your Playlists</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('profile') }}">Profile</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
+            {% if current_user.is_authenticated %} {% if current_user.is_creator
+            %}
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('home') }}"
+              >Home</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('creator_dashboard') }}"
+              >Dashboard</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('playlist') }}"
+              >Your Playlists</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('profile') }}"
+              >Profile</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('logout') }}"
+              >Logout</a
+            >
             {% elif current_user.username=='admin' %}
-              <a class="nav-link active" aria-current="page" href="{{ url_for('admin_dashboard') }}">Dashboard</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('admin_dashboard') }}"
+              >Dashboard</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('logout') }}"
+              >Logout</a
+            >
             {% else %}
-              <a class="nav-link active" aria-current="page" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('register_creator') }}">Creator Account</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('playlist') }}">Your Playlists</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('profile') }}">Profile</a>
-              <a class="nav-link active" aria-current="page" href="{{ url_for('logout') }}">Logout</a>
-              {% endif %}
-          {% else %}
-                <a class="nav-item nav-link active" aria-current="page" href="{{ url_for('admin_login') }}">Admin Login</a>
-          {% endif %}
-        </div>        
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('home') }}"
+              >Home</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('register_creator') }}"
+              >Creator Account</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('playlist') }}"
+              >Your Playlists</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('profile') }}"
+              >Profile</a
+            >
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="{{ url_for('logout') }}"
+              >Logout</a
+            >
+            {% endif %} {% else %}
+            <a
+              class="nav-item nav-link active"
+              aria-current="page"
+              href="{{ url_for('admin_login') }}"
+              >Admin Login</a
+            >
+            {% endif %}
+          </div>
         </div>
       </div>
     </nav>
-    
-    <div class="container mt-5">
-    {% with messages = get_flashed_messages(with_categories=True) %} 
-    {% if messages %} 
-      {% for category, message in messages %}
-        <div class="alert alert-{{ category }} alert-dismissable fade show margin-right-5 d-flex justify-content-between">
-          {{ message }}
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-      {% endfor %} 
-    {% endif %} 
-    {% endwith %} 
-    </div>
 
-    {% block content %} {% endblock
-    content %}
+    <!-- <div class="container mt-5">
+      {% with messages = get_flashed_messages(with_categories=True) %} {% if
+      messages %} {% for category, message in messages %}
+      <div
+        class="alert alert-{{ category }} alert-dismissable fade show margin-right-5 d-flex justify-content-between"
+      >
+        {{ message }}
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="alert"
+          aria-label="Close"
+        ></button>
+      </div>
+      {% endfor %} {% endif %} {% endwith %}
+    </div> -->
 
+    <div id="app"></div>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
