--- a/musicapp/templates/layout.html
+++ b/musicapp/templates/layout.html
@@ -19,152 +19,92 @@
     <title>cuhu</title>
   </head>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg bg-primary-subtle">
-      <div class="container-fluid">
-        <a
-          class="navbar-brand mb-0 mx-5 h1 display-6 fw-bold"
-          href="{{ url_for('index') }}"
-        >
-          <img
-            src="{{ url_for('static', filename = '/musical-note.png') }}"
-            alt="Logo"
-            width="30"
-            height="30"
-            class="d-inline-block align-text-top me-2"
-          />
-          cuhu
-        </a>
+    <div id="app">
+      <nav class="navbar fixed-top navbar-expand-lg bg-primary-subtle">
+        <div class="container-fluid">
+          <router-link class="navbar-brand mb-0 mx-5 h1 display-6 fw-bold">
+            <img
+              src="{{ url_for('static', filename = '/images/musical-note.png') }}"
+              alt="Logo"
+              width="30"
+              height="30"
+              class="d-inline-block align-text-top me-2"
+            />
+            cuhu
+          </router-link>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div
-          class="collapse navbar-collapse navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between align-items-center"
-          id="navbarSupportedContent"
-        >
-          <div class="ms-auto d-flex mx-5">
-            {% if current_user.is_authenticated %} {% if current_user.is_creator
-            %}
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('home') }}"
-              >Home</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('creator_dashboard') }}"
-              >Dashboard</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('playlist') }}"
-              >Your Playlists</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('profile') }}"
-              >Profile</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('logout') }}"
-              >Logout</a
-            >
-            {% elif current_user.username=='admin' %}
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('admin_dashboard') }}"
-              >Dashboard</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('logout') }}"
-              >Logout</a
-            >
-            {% else %}
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('home') }}"
-              >Home</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('register_creator') }}"
-              >Creator Account</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('playlist') }}"
-              >Your Playlists</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('profile') }}"
-              >Profile</a
-            >
-            <a
-              class="nav-link active"
-              aria-current="page"
-              href="{{ url_for('logout') }}"
-              >Logout</a
-            >
-            {% endif %} {% else %}
-            <a
-              class="nav-item nav-link active"
-              aria-current="page"
-              href="{{ url_for('admin_login') }}"
-              >Admin Login</a
-            >
-            {% endif %}
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse navbar-nav me-auto mb-2 mb-lg-0 d-flex justify-content-between align-items-center"
+            id="navbarSupportedContent"
+          >
+            <div class="ms-auto d-flex mx-5">
+              {% if current_user.is_authenticated %} {% if
+              current_user.is_creator %}
+              <router-link class="nav-link active" to="">Home</router-link>
+
+              <router-link class="nav-link active" to="">Dashboard</router-link>
+
+              <router-link class="nav-link active" to=""
+                >Your Playlists</router-link
+              >
+
+              <router-link class="nav-link active" to="">Profile</router-link>
+
+              <router-link class="nav-link active" to="">Logout</router-link>
+
+              {% elif current_user.username=='admin' %}
+
+              <router-link class="nav-link active" to="">Dashboard</router-link>
+
+              <router-link class="nav-link active" to="">Logout</router-link>
+
+              {% else %}
+
+              <router-link class="nav-link active" to="">Home</router-link>
+
+              <router-link class="nav-link active" to=""
+                >Creator Account</router-link
+              >
+
+              <router-link class="nav-link active" to=""
+                >Your Playlists</router-link
+              >
+
+              <router-link class="nav-link active" to=""> Profile</router-link>
+
+              <router-link class="nav-link active" to=""> Logout</router-link>
+
+              {% endif %} {% else %}
+              <router-link class="nav-item nav-link active" to=""
+                >Admin Login</router-link
+              >
+              {% endif %}
+            </div>
           </div>
         </div>
-      </div>
-    </nav>
+      </nav>
 
-    <!-- <div class="container mt-5">
-      {% with messages = get_flashed_messages(with_categories=True) %} {% if
-      messages %} {% for category, message in messages %}
-      <div
-        class="alert alert-{{ category }} alert-dismissable fade show margin-right-5 d-flex justify-content-between"
-      >
-        {{ message }}
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="alert"
-          aria-label="Close"
-        ></button>
-      </div>
-      {% endfor %} {% endif %} {% endwith %}
-    </div> -->
+      <router-view></router-view>
 
-    <div id="app"></div>
-
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+      <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+      <script src="{{ url_for('static', filename='app.js') }}" type="module"></script>
+      <script src="https://unpkg.com/vue-router@4.0.15/dist/vue-router.global.js"></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"
+      ></script>
+    </div>
   </body>
 </html>
