--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -19,13 +19,14 @@
     <title>cuhu</title>
   </head>
   <body>
+    
     <div id="app"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.0.0/dist/vue-router.js"></script>
     <script
       type="module"
-      src="{{ url_for('static', filename='app.js') }}"
+      src="{{ url_for('static', filename='index.js') }}"
     ></script>
 
     <script
