--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -24,6 +24,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.0.0/dist/vue-router.js"></script>
+    <!-- <script src="https://unpkg.com/vuex@2.0.0"></script> -->
+    <script src="https://unpkg.com/vuex@2.0.0/dist/vuex.js"></script>
     <script
       type="module"
       src="{{ url_for('static', filename='index.js') }}"
