--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -21,7 +21,9 @@
   <body>
     
     <div id="app"></div>
-
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jwt-decode-module@1.0.4/build/jwt-decode.min.js" type="module"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/jwt-decode@4.0.0/build/cjs/index.min.js"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode@2.2.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://unpkg.com/vue-router@3.0.0/dist/vue-router.js"></script>
     <!-- <script src="https://unpkg.com/vuex@2.0.0"></script> -->
